--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 	<li>parcours</li>
 </ul>
 			<h2> <em> <strong> Mon travail </strong> </em> <h2> 
-		<p> Voici le travail que j'ai effectué <p> 
+		<p> vous pouvez consulter mon travail <a href="test page 2.html"> ici</a> <p> 
 		
 		<p> Pour tout demandes veuillez me contacter à : <mark>fakemail@yessai.com </mark> 
 			<br> Ou sur mon  <a href="https://www.instagram.com/emmadrl_/"> instagram </a>  <p>
