--- a/test.html
+++ b/test.html
@@ -1,23 +1,23 @@
 <!Doctype html>
 <html> 
 	<head> 
-		<!-- En-tête de la page --> 
 		<meta charset="utf8" />
+		<link rel="stylesheet" href="mamatest.css" />
 	<title>  Emma Durel </title>
 	</head>
 
 	<body> 
 			<!-- Corps de la page -->
-			<h1> <em> Qui suis-je </em> <h2>
-			<p>Je m'appel bla bla bla bla bla <p>
+			<h1> <em> Qui suis-je </em> </h1>
+			<p1>Je m'appel bla bla bla bla bla </p1>
 <ul>
 	<li> etude</li>	
 	<li>parcours</li>
 </ul>
-			<h2> <em> <strong> Mon travail </strong> </em> <h2> 
-		<p> vous pouvez consulter mon travail <a href="test page 2.html"> ici</a> <p> 
+			<h2> <em> <strong> Mon travail </strong> </em> </h2> 
+		<p2> vous pouvez consulter mon travail <a href="test page 2.html"> ici</a> </p2> 
 		
-		<p> Pour tout demandes veuillez me contacter à : <mark>fakemail@yessai.com </mark> 
-			<br> Ou sur mon  <a href="https://www.instagram.com/emmadrl_/"> instagram </a>  <p>
+		<p3> Pour tout demandes veuillez me contacter à : <mark>fakemail@yessai.com </mark> 
+			<br> Ou sur mon  <a href="https://www.instagram.com/emmadrl_/"> instagram </a>  </p3>
 	</body>
 </html>
