--- a/test page 2.html
+++ b/test page 2.html
@@ -1,9 +1,26 @@
 <Doctype html>
 <html> 
 	<head> 
-		meta charset="utf8"/> 
+		<meta charset="utf8"/> 
+		<link rel="stylesheet" href="style.css" />
 	<title> Mon travail </title> 
 	</head>
-
+	<p>	
+		<h1> Portrait <h1>
+			<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-10resize.jpg" title="modele @ana_czw"/>  
+			<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-9resize.jpg" title="modele @mami_sophie_"/> 
+			<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-6resize.jpg" a href="https://www.instagram.com/emmadrl_/ "/>
+			<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-8resize.jpg" title="modele @manuella.xoxo"/>
+	</p>
+	<p>
+		<h2> art </h2>
+		<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\photo9bisresize.jpg" />
+		<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\photo10resize.jpg"/>
+		<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\photo11bisresize.jpg" />
+	<p/>
+	<p/>
+		<h3> nu </h3>
+		<img src="C:/Users\brant\OneDrive\Bureau\emma-main\emma photos\ana-4resize.jpg" title="modele @ana_czw">
+		<img src="C:/Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-5resize.jpg" title="modele @her_mia_n">
 	<body>
 	
