--- a/test page 2.html
+++ b/test page 2.html
@@ -1,9 +1,33 @@
 <Doctype html>
 <html> 
 	<head> 
-		meta charset="utf8"/> 
+		<meta charset="utf8"/> 
+		<link rel="stylesheet" href="mamatest2.css" />
 	<title> Mon travail </title> 
 	</head>
-
+	<p1>	
+		<h1> Portrait </h1>
+			<div>
+			<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-10resize.jpg" title="modele @ana_czw"/>  
+			<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-9resize.jpg" title="modele @mami_sophie_"/> 
+			<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-6resize.jpg" title="modele @her_mia_n"/>
+			<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-8resize.jpg" title="modele @manuella.xoxo"/>
+			</div>	
+	</p1>
+	<p2>
+		<h2> art </h2>
+		<div>
+		<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\photo9bisresize.jpg" />
+		<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\photo10resize.jpg"/>
+		<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\photo11bisresize.jpg" />
+		</div>
+	</p2>
+	<p3>
+		<h3> nu </h3>
+		<div>
+		<img src="C:/Users\brant\OneDrive\Bureau\emma-main\emma photos\ana-4resize.jpg" title="modele @ana_czw">
+		<img src="C:/Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-5resize.jpg" title="modele @her_mia_n">
+		</div>	
+	</p3>
 	<body>
 	
