--- a/essaie v1.html
+++ b/essaie v1.html
@@ -1,138 +1,223 @@
-<Doctype html>
+<!DOCTYPE html>
 <html> 
-	<head> 
-		<meta charset="utf8"/> 
-		<link rel="stylesheet" href="bite.css" />
+<head> 
+	<meta charset="utf8"/> 
+	<link rel="stylesheet" href="bite.css" />
+				<script type="text/javascript">  <!-- implementation script java formulaire
+		function validateForm()                                    
+{ 
+    var name = document.forms["myForm"]["name"];               
+    var email = document.forms["myForm"]["email"];    
+    var message = document.forms["myForm"]["message"];   
+   
+    if (name.value == "")                                  
+    { 
+        document.getElementById('errorname').innerHTML="Veuillez entrez un nom valide";  
+        name.focus(); 
+        return false; 
+    }else{
+        document.getElementById('errorname').innerHTML="";  
+    }
+       
+    if (email.value == "")                                   
+    { 
+        document.getElementById('erroremail').innerHTML="Veuillez entrez une adresse mail valide"; 
+        email.focus(); 
+        return false; 
+    }else{
+        document.getElementById('erroremail').innerHTML="";  
+    }
+   
+    if (email.value.indexOf("@", 0) < 0)                 
+    { 
+        document.getElementById('erroremail').innerHTML="Veuillez entrez une adresse mail valide"; 
+        email.focus(); 
+        return false; 
+    } 
+   
+    if (email.value.indexOf(".", 0) < 0)                 
+    { 
+        document.getElementById('erroremail').innerHTML="Veuillez entrez une adresse mail valide"; 
+        email.focus(); 
+        return false; 
+    } 
+   
+    if (message.value == "")                           
+    {
+        document.getElementById('errormsg').innerHTML="Veuillez entrez un message valide"; 
+        message.focus(); 
+        return false; 
+    }else{
+        document.getElementById('errormsg').innerHTML="";  
+    }
+   
+    return true; 
+}
+		</script>
+		
 	<title> Emma Durel </title> 
 	<style>
-.boutonmenuprincipal {
-background-color: black;
-color: white;
-border: none;
-cursor: pointer;
-padding:20px;
-margin-top:7;
-font-size: 15;
-}
-.boutonmenuprincipal:hover {
-background-color: black;
-}
-.dropdown {
-position: relative;
-display: inline-block;
-}
-.dropdown-child {
-display: none;
-background-color: black;
-min-width: 30px;
-}
-.dropdown-child a {
-color: white;
-padding: 20px;
-text-decoration: none;
-display: block;
-}
-.dropdown:hover .dropdown-child {
-display: block;
-}
-</style>
-	</head>
+		.boutonmenuprincipal {
+			background-color: black;
+			color: white;
+			border: none;
+			cursor: pointer;
+			padding:20px;
+			margin-top:7;
+			font-size: 15;
+		}
+		.boutonmenuprincipal:hover {
+			background-color: black;
+		}
+		.dropdown {
+			position: relative;
+			display: inline-block;
+		}
+		.dropdown-child {
+			display: none;
+			background-color: black;
+			min-width: 30px;
+		}
+		.dropdown-child a {
+			color: white;
+			padding: 20px;
+			text-decoration: none;
+			display: block;
+		}
+		.dropdown:hover .dropdown-child {
+			display: block;
+		}
+	</style>
+</head>
 
 <div class="dropdown">
- <button class="boutonmenuprincipal">Menu Principal</button>
- <div class="dropdown-child">
- <a href="#qui suis-je ?">Qui suis je ? </a>
- <a href="#Mon travail">Mon travail </a>
- <a href="C:\Users\brant\OneDrive\Bureau\emma-main/formulaire de contact.html">Contact </a>
- </div>
- </div>
-  </ul>
-	<p1>	
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-					
-			<h1 id="Mon travail"> Mon travail </h1>
-		<h2> Portrait </h2>
-			<div>
-			<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-10resize.jpg" title="modele @ana_czw"/>  
-			<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-9resize.jpg" title="modele @mami_sophie_"/> 
-			<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-6resize.jpg" title="modele @her_mia_n"/>
-			<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-8resize.jpg" title="modele @manuella.xoxo"/>
-			</div>	
-	</p1>
-	<p2>
-		<h3> art </h3>
-		<div>
+	<button class="boutonmenuprincipal">Menu Principal</button>
+	<div class="dropdown-child">
+		<a href="#qui suis-je ?">Qui suis je ? </a>
+		<a href="#Mon travail">Mon travail </a>
+		<a href="#Contact">Contact </a>
+	</div>
+</div>
+</ul>
+	<br>
+	<br>
+	<br>
+	<br>
+<h5 id="qui suis-je ?"> Qui suis-je ? </h5>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+
+<p>Passionnée de photographie depuis toujours je pratiques la photo depuis des années, Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit. </p>
+<ul>
+	<li> J'ai étudié a la MJM de Rennes Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue  </li>	
+	<li>parcours</li>
+</ul>
+<p1>	
+
+	
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	
+	
+	
+<!-- partie mon travail -->
+
+	<h1 id="Mon travail"> Mon travail </h1>
+	<h2> Portrait </h2>
+	<div>
+		<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-10resize.jpg" title="modele @ana_czw"/>  
+		<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-9resize.jpg" title="modele @mami_sophie_"/> 
+		<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-6resize.jpg" title="modele @her_mia_n"/>
+		<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-8resize.jpg" title="modele @manuella.xoxo"/>
+	</div>	
+</p1>
+<p2>
+	<h3> art </h3>
+	<div>
 		<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\photo9bisresize.jpg" />
 		<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\photo10resize.jpg"/>
 		<img src="C:\Users\brant\OneDrive\Bureau\emma-main\emma photos\photo11bisresize.jpg" />
-		</div>
-	</p2>
-	<p3>
-		<h4> nu </h4>
-		<div>
+	</div>
+</p2>
+<p3>
+	<h4> nu </h4>
+	<div>
 		<img src="C:/Users\brant\OneDrive\Bureau\emma-main\emma photos\ana-4resize.jpg" title="modele @ana_czw">
 		<img src="C:/Users\brant\OneDrive\Bureau\emma-main\emma photos\bieng-5resize.jpg" title="modele @her_mia_n">
-		</div>	
-	</p3>
-		<h5 id="qui suis-je ?"> Qui suis-je ? </h5>
-			<p3>Je m'appel bla bla bla bla bla </p3>
-<ul>
-	<li> etude</li>	
-	<li>parcours</li>
-</ul>
-	<body>
+	</div>	
+</p3>
+
+
+<!-- partie contact -->
+
+<h6 id="Contact"> Contact</h6>
+      <form name="myForm" action="/file.php" onsubmit="return validateForm()" method="post">
+         <table class="form-style">
+            <tr>
+               <td>
+                  <label>
+                     Votre nom <span class="required">*</span>
+                  </label>
+               </td>
+               <td>
+                  <input type="text" name="name" class="long"/>
+                  <span class="error" id="errorname"></span>
+               </td>
+            </tr>
+            <tr>
+               <td>
+                  <label>
+                     Votre adresse e-mail <span class="required">*</span>
+                  </label>
+               </td>
+               <td>
+                  <input type="email" name="email" class="long"/>
+                  <span class="error" id="erroremail"></span>
+               </td>
+            </tr>
+            <tr>
+               <td>
+                  <label>
+                     Message <span class="required">*</span>
+                  </label>
+               </td>
+               <td>
+                  <textarea name="message" class="long field-textarea"></textarea>
+                  <span class="error" id="errormsg"></span>
+               </td>
+            </tr>
+            <tr>
+               <td></td>
+               <td>
+                  <input type="submit" value="Envoyer">      
+                  <input type="reset" value="Réinitialiser"> 
+               </td>
+            </tr>
+         </table>
+      </form>
+<body>
